tests/errors/arrays/index-with-bool.fn
---
Description: Array indexed with a bool
Expected: FN3216
---

type Program
{
    static fn Main -> i32
    {
        var arr = [1, 2, 3]
        var bad = arr[true]
        return 0
    }
}
